# trie-compression

./: .gitignore
code/: .gitignore  CMakeLists.txt  DAWG.hpp  LabeledTree.hpp  main.cpp
code/CMakeModules/: ConfigureCompilerClang.cmake
code/include/: CMakeLists.txt
code/include/ChainsDivisionSolver/: CMakeLists.txt  ChainsDivisionSolver.hpp
code/include/DAWG/: CMakeLists.txt  DAWG.hpp  TreeDAWG.hpp
code/include/EdgeLabeledTree/: CMakeLists.txt  EdgeLabeledTree.hpp
code/include/LabeledTree/: CMakeLists.txt  LabeledTree.hpp
code/include/TreeCompressor/: CMakeLists.txt  TreeCompressor.hpp
code/include/Triplet/: CMakeLists.txt  Triplet.hpp
code/include/XBWT/: CMakeLists.txt  XBWT.hpp
code/plots/: high_low_comparation.py  plot_time.py  plots.py
code/sources/: CMakeLists.txt
code/sources/experiments/: CMakeLists.txt  experiments.cpp  time_experiments.cpp
code/sources/test/: CMakeLists.txt  test.cpp
code/tree_generator/: README.md  config.ini  config_large_repetitive.ini  repetitive_tree_generator.py
presentation/: defense_text.docx  main.bak0  main.nav  main.snm  main.tex  references.bib  ru.sty  setup.tex
presentation/img/: objective.drawio  pipeline.drawio
report/: Abstract.tex  bibliography.bib  dedica.tex  frontespizio.tex  macros.tex  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  time_experiments_20250919_103437.csv
report/Capitoli/: Collapsing.tex  ExperimentsAndConclusions.tex  HopcroftClasses.tex  Implementation.tex  Introduction.tex  Introduzione.tex  ProjectIntroduction.tex  Reduction.tex  ThBackground.tex  WheelerGraphs.tex  XBWT.tex  conclusionsAndFutureWork.tex  experiments.tex  indexing.tex  minWeigthPerfectBipartiteMatching.tex  notation.tex  thbgLabeledTrees.tex  wheelerAndPsortable.tex
report/Capitoli/XBWT/: ExperimentsAndConclusions.tex  Implementation.tex  Introduzione.tex  ThBackground.tex  XBWT.tex
report/Immagini/tikz/: example_tree.tex  mn-compressed-tree.tex
report/_minted/: 69D7C06C1C28ABDCF1E25A7FC096EBBA.highlight.minted  79C54D7F1E95C4E727A5518E0F5E9606.highlight.minted  872A28180B04D2FAAF8CE9E98A987917.highlight.minted  9B0CF22E14C153E83852C24955BF89DE.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
report/_minted-main/: 03E2583F09663310F8380C8698AC0D3BCF33289265490CC72470AF6FAFE9A294.pygtex  1E49A28D7884607F5F5520AC9D4F5682CF33289265490CC72470AF6FAFE9A294.pygtex  2050ED30047643BC775E082364A4886CCF33289265490CC72470AF6FAFE9A294.pygtex  4863F23FCA49CFCFDF70382C355556A5CF33289265490CC72470AF6FAFE9A294.pygtex  6BDF829C715ACC573F6E02E05DF2EA96CF33289265490CC72470AF6FAFE9A294.pygtex  9033ED307A00500DB9451C1D4135C9C8CF33289265490CC72470AF6FAFE9A294.pygtex  9344F37198901A9CFBC0F884C2C8377DCF33289265490CC72470AF6FAFE9A294.pygtex  94530DFA02AFC63A0A6B0CF2880532F5CF33289265490CC72470AF6FAFE9A294.pygtex  D041E9071D5847C1AC31D902431252F3CF33289265490CC72470AF6FAFE9A294.pygtex  D84D34BB61D008C60BCFA33B32588A8ECF33289265490CC72470AF6FAFE9A294.pygtex  EBAD89FDBA65D32EC8DB0CEA61DF28C9CF33289265490CC72470AF6FAFE9A294.pygtex  F5713B72E7B97B4A2D97A5FDFE5AA3F6CF33289265490CC72470AF6FAFE9A294.pygtex
report/old_stuff/: HopcroftClasses_old.tex  Reduction_old.tex  XBWT.tex  indexing.tex  old_notation.tex
